--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body{
     background-color: papayawhip;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 nav{
     background-color: rgb(196, 194, 194);
@@ -7,7 +10,7 @@ nav{
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    height: 30px;
+    height: 60px;
     width: 100%;
     position: fixed;
 }
@@ -18,8 +21,8 @@ a{
     text-align: center;
     margin: 5px;
     border-radius: 10px;
-    height: 10px;
-    width: 35px;
+    height: 25px;
+    width: 45px;
     border: 5px solid rgb(212, 210, 210);
 }
 a:active{
