--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ nav{
     height: 60px;
     width: 100%;
     position: fixed;
+    margin-top: 30px;
 }
 a{
     color: white;
@@ -21,8 +22,8 @@ a{
     text-align: center;
     margin: 5px;
     border-radius: 10px;
-    height: 25px;
-    width: 45px;
+    height: 35px;
+    width: 65px;
     border: 5px solid rgb(212, 210, 210);
 }
 a:active{
