--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
 body{
     background-color: papayawhip;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-nav{
+.div_nav{
     background-color: rgb(196, 194, 194);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
     height: 60px;
-    width: 100%;
+    width: 95%;
     position: fixed;
-    margin-top: 30px;
+    margin-top: 35px;
 }
 a{
     color: white;
@@ -22,12 +19,33 @@ a{
     text-align: center;
     margin: 5px;
     border-radius: 10px;
-    height: 35px;
-    width: 65px;
+    height: 25px;
+    width: 125px;
     border: 5px solid rgb(212, 210, 210);
 }
 a:active{
     background-color: rgb(235, 231, 231);
     border: 5px solid rgb(241, 240, 240);
     transition: 0.89s ease;
+}
+.div_main{
+    height: 500px;
+    width: 95%;
+    background-color: yellow;
+    margin-top: 110px;
+    padding: 240px;
+    border-radius: 10px;
+}
+footer{
+    background-color: rgb(196, 194, 194);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    height: 60px;
+    width: 95%;
+    margin-top: 10px;
+}
+.div_container{
+    padding-top: 20px;
 }
