--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ a:active{
     margin-top: 110px;
     padding: 240px;
     border-radius: 10px;
+    background-size: contain;
 }
 footer{
     background-color: rgb(196, 194, 194);
