--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 body{
     background-color: papayawhip;
+    display:flow-root ;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
 }
 .div_nav{
     background-color: rgb(196, 194, 194);
@@ -8,11 +12,11 @@ body{
     justify-content: center;
     border-radius: 10px;
     height: 60px;
-    width: 95%;
+    width: 90%;
     position: fixed;
     margin-top: 35px;
 }
-a{
+.a_tag_nav{
     color: white;
     font-weight: bolder;
     text-decoration: none;
@@ -21,7 +25,7 @@ a{
     border-radius: 10px;
     height: 25px;
     width: 125px;
-    border: 5px solid rgb(212, 210, 210);
+    border: 2px solid rgb(212, 210, 210);
 }
 a:active{
     background-color: rgb(235, 231, 231);
@@ -30,12 +34,12 @@ a:active{
 }
 .div_main{
     height: 500px;
-    width: 95%;
+    width: 90%;
     background-color: yellow;
     margin-top: 110px;
-   
     border-radius: 10px;
     background-size: contain;
+    margin-left: 4%;
 }
 footer{
     background-color: rgb(196, 194, 194);
@@ -44,8 +48,9 @@ footer{
     justify-content: center;
     border-radius: 10px;
     height: 60px;
-    width: 95%;
+    width: 90%;
     margin-top: 10px;
+    margin-left: 4%;
 }
 .div_container{
     padding-top: 20px;
