--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ a:active{
     transition: 0.89s ease;
 }
 .div_main{
-    min-height: 500px;
+    min-height: 1000px;
     width: 90%;
     background-color: yellow;
     margin-top: 110px;
@@ -85,3 +85,50 @@ img{
       height: 450px;
       border: none;
     }
+    iframe{
+        border: 2px solid rgb(193, 140, 140);
+        border-radius: 10px;
+    }
+    section{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .con-min{
+        margin: 2px;
+        height: 85px;
+        width: 185px;
+        padding: 15px;
+        border-radius: 50%;
+    }
+    .cons{
+        margin: 2px;
+        height: 155px;
+        width: 155px;
+        border-radius: 10px;
+    }
+   .conz{
+         margin: 2px;
+        height: 155px;
+        width: 155px;
+        border-radius: 50%;
+        border: 2px solid grey;
+    }
+    .im1{
+        height: 50px;
+        width: 40px;
+        image-orientation: inherit;
+    }
+     .im11{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     }
+     .im3{
+        height: 55px;
+        width: 40px;
+     }
+     .im4{
+        margin-top: -20px;
+     }
